3rd commit : bug fixed

--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<div>Testing..</div>
-<div>Testing.. 2 .. debug here</div>
+<div>Testing.. here is the bug</div>
+<div>Testing.. 2 no bug here</div>
